# Physics-Classes

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PhysicsClassesLinkDef.hh  README.md  Scripts.cmake  cmake_install.cmake  thisPhysicsClasses.sh
Old/: AngularDistribution.h  Fitter.cxx  PhysicsUtils.cxx  PhysicsUtils.h  PublicationColors.h  TwoFNR.cxx  TwoFNR.h
inc/: AngComparator.h  AngDifferentialXS.h  AngFitter.h  AngGlobals.h  AngIntervals.h  CalibrationRunner.h  CalibrationSource.h  FitCompositeTF1.h  FitData.h  FitInterface.h  FitModel.h  FitObjective.h  FitPlotter.h  FitRunner.h  FitUtils.h  Interpolators.h  ModelPlotter.h  PhysColors.h  PhysExperiment.h  PhysOMP.h  PhysSF.h  PhysSM.h  PhysState.h
src/: AngComparator.cxx  AngDifferentialXS.cxx  AngFitter.cxx  AngGlobals.cxx  AngIntervals.cxx  AngularDistribution.cxx  AngularDistribution.h  CalibrationRunner.cxx  CalibrationSource.cxx  Colors.h  FitCompositeTF1.cxx  FitData.cxx  FitFCN.cxx  FitFCN.h  FitInterface.cxx  FitModel.cxx  FitModel.h  FitObjective.cxx  FitPlotter.cxx  FitRunner.cxx  FitRunner.h  FitUtils.cxx  Fitter.cxx  Fitter.h  Interpolators.cxx  ModelPloter.cxx  PhysColors.cxx  PhysExperiment.cxx  PhysOMP.cxx  PhysSF.cxx  PhysSM.cxx  PhysicsUtils.cxx  PhysicsUtils.h  PublicationColors.cxx  TwoFNR.cxx  TwoFNR.h
